force-app/main/default/objects/Course__c/fields/Completed_Topics__c.field-meta.xml
<CustomField>
    <fullName>Completed_Topics__c</fullName>
    <label>Completed Topics</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>