force-app/main/default/objects/Course__c/fields/Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percentage__c</fullName>
    <formula>IF(
  Total_Topics__c = 0,
  0,
  (Completed_Topics__c / Total_Topics__c) * 100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>