force-app/main/default/objects/Course__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <externalId>true</externalId>
    <label>Course</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>