force-app/main/default/objects/Course__c/fields/Total_Topics__c.field-meta.xml
<CustomField>
    <fullName>Total_Topics__c</fullName>
    <label>Total Topics</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>