force-app/main/default/objects/Course__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>